# form-filler-tool

./: .gitignore  AGENTS.md  DemoVideo.webm  Dockerfile  README.md  docker-compose.yaml  main.py  model.py  requirements.txt  server-connexion.tsx  test.ipynb
TINS_Edition/: PySide6modern.md  best_gui.py  scuffedepoch-sysp.md
app/: Dockerfile  main.py  pyproject.toml  requirements.txt
app/personnal_info/: my_info.txt
backend/: ollama.mjs  prompt.txt
extension/: package-lock.json  package.json  wxt.config.ts
extension/entrypoints/: content.tsx
extension/entrypoints/popup/: App.css  App.tsx  main.tsx  requests.tsx  style.css
notebooks/: test.ipynb
ollama/: Dockerfile  pull-models.sh
