[tool.poetry]
name = "ai-form-filler"
version = "0.1.0"
description = ""
authors = ["flamschou <wandrille.flamant@phospho.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
loguru = "^0.7.2"
langchain-community = "^0.3.7"
langchain-core = "^0.3.20"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
